# payment-processing-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.demo.yml  docker-compose.yml  pyproject.toml  task_description.md
alembic/: env.py
alembic/versions/: 3c7557d6de22_create_payments_and_outbox.py
app/: demo_webhook.py  main.py
app/api/: dependencies.py
app/api/v1/: payments.py
app/broker/: publisher.py  retry.py  topology.py
app/core/: config.py
app/db/: session.py
app/db/models/: __init__.py  outbox.py  payment.py
app/models/: __init__.py  outbox.py  payment.py
app/repositories/: outbox.py  payments.py
app/schemas/: payments.py
app/services/: consumer.py  gateway.py  idempotency.py  payments.py  webhooks.py
app/utils/: backoff.py
app/workers/: consumer.py  outbox_publisher.py
tests/: conftest.py
tests/integration/: test_payments_api.py
tests/unit/: test_backoff.py  test_broker_retry.py  test_broker_topology.py  test_config.py  test_consumer_service.py  test_idempotency.py  test_outbox_repository.py  test_payment_schemas.py  test_payment_service.py  test_worker_consumer.py
