[project]
name = "nebus"
version = "0.1.0"
description = "Async payment processing service"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "faststream[cli,rabbit]>=0.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "uvicorn[standard]>=0.30.0",
    "uuid6>=2024.7.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
